# freeloader

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: general.mdc
src/: audio.py  demo.py  entrypoint.py  models.py  shazam.py  soundcloud.py  stdout.py  types.py
src/tests/: test_audio.py  test_e2e.py  test_recording.py
