[project]
name = "freeloader"
requires-python = ">=3.12"
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.setuptools]
packages = ["freeloader"]

[tool.ruff]
line-length = 88
lint.select = ["E4", "E7", "E9", "F", "D", "I"]
lint.ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D104",  # Missing docstring in public package
    "D203",  # 1 blank line required before class docstring (found 0)
]
lint.per-file-ignores = {"src/tests/*" = ["D"]}

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
httpx = "^0.28.0"
pydub = "^0.25.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "0.12.0"
pytest-mock = "^3.14.1"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
