[project]
name = "freeloader"
requires-python = ">=3.13,<4.0"
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 88
lint.select = ["E4", "E7", "E9", "F", "D", "I"]
lint.ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D203",  # 1 blank line required before class docstring (found 0)
]

[tool.poetry.dependencies]
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
httpx = "^0.28.0"
pydub = "^0.25.1"
soundcloud-lib = "^0.6.1"
shazamio = "^0.8.1"
pytest-asyncio = "^1.2.0"
audioop-lts = "^0.2.2"
tqdm = "^4.67.1"
prettytable = "^3.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "0.12.0"
pytest-mock = "^3.14.1"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
